update gradle build
moved code used in multiple projects to a seperate plugin which is stored in mvn-repo